--- a/FMR-Measurement-UI-15-08.ui
+++ b/FMR-Measurement-UI-15-08.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1010</width>
-    <height>480</height>
+    <height>561</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -286,6 +286,55 @@
        </property>
       </widget>
      </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Modulation Amp:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="SpinBox_custom" name="spinBoxModAmp">
+       <property name="locale">
+        <locale language="English" country="UnitedKingdom"/>
+       </property>
+       <property name="suffix">
+        <string>V</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>10.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>5.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_12">
+       <property name="text">
+        <string>Input Range:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="SpinBox_custom" name="spinBoxInputRange">
+       <property name="suffix">
+        <string>V</string>
+       </property>
+       <property name="decimals">
+        <number>4</number>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
+       </property>
+       <property name="value">
+        <double>0.002000000000000</double>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
@@ -414,6 +463,9 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="measurementSettingsdock">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
    <property name="windowTitle">
     <string>Measurement Settings</string>
    </property>
@@ -422,21 +474,14 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_6">
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Sample Angle:</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Frequencies:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
+     <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLineEdit" name="sampleAngleFrom">
@@ -454,7 +499,14 @@
        </item>
       </layout>
      </item>
-     <item row="1" column="1">
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Frequencies:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QLineEdit" name="frequenciesFrom">
@@ -472,17 +524,68 @@
        </item>
       </layout>
      </item>
-     <item row="1" column="2">
+     <item row="3" column="2">
       <widget class="SpinBox_custom" name="spinBoxFreqStep">
        <property name="enabled">
         <bool>false</bool>
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
+     <item row="2" column="2">
       <widget class="SpinBox_custom" name="spinBoxAngleStep">
        <property name="enabled">
         <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Frequency [GHz]</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEditCWFreq">
+         <property name="inputMask">
+          <string>99.9999</string>
+         </property>
+         <property name="text">
+          <string>15.0</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_11">
+         <property name="text">
+          <string>Power [dBm]</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEditCWPower">
+         <property name="inputMask">
+          <string>99.999</string>
+         </property>
+         <property name="text">
+          <string>13.0</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>CW Settings:</string>
        </property>
       </widget>
      </item>
