--- a/DiodeCalibration_UI.ui
+++ b/DiodeCalibration_UI.ui
@@ -15,9 +15,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="Plot_pyqtgraph" name="graphicsView"/>
-    </item>
     <item row="1" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -108,8 +105,18 @@
       </item>
      </layout>
     </item>
-    <item row="2" column="0">
+    <item row="0" column="0">
+     <widget class="Plot_pyqtgraph" name="graphicsView"/>
+    </item>
+    <item row="3" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QPushButton" name="pushButtonLoad">
+        <property name="text">
+         <string>Load Frequenzliste</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="QPushButton" name="pushButtonStart">
         <property name="text">
