--- a/FMR-Measurement-UI-15-08.ui
+++ b/FMR-Measurement-UI-15-08.ui
@@ -338,27 +338,6 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="logBookDock">
-   <property name="floating">
-    <bool>false</bool>
-   </property>
-   <property name="features">
-    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
-   </property>
-   <property name="windowTitle">
-    <string>Measurement View</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>4</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_4">
-    <layout class="QGridLayout" name="gridLayout_3">
-     <item row="0" column="0">
-      <widget class="ExcelWriter" name="widget" native="true"/>
-     </item>
-    </layout>
-   </widget>
-  </widget>
   <widget class="QDockWidget" name="magnetfieldock">
    <property name="features">
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
@@ -596,6 +575,37 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="logBookDock">
+   <property name="floating">
+    <bool>false</bool>
+   </property>
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="windowTitle">
+    <string>LogBook</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_4">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QTableView" name="tableViewExcel">
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustToContents</enum>
+       </property>
+       <attribute name="horizontalHeaderVisible">
+        <bool>false</bool>
+       </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionMagnet_Powersupply">
    <property name="text">
     <string>Magnet Powersupply</string>
@@ -630,12 +640,6 @@
    <class>SpinBox_custom</class>
    <extends>QDoubleSpinBox</extends>
    <header>customwidgets</header>
-  </customwidget>
-  <customwidget>
-   <class>ExcelWriter</class>
-   <extends>QWidget</extends>
-   <header>devices</header>
-   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
